# CTBN-Voltage-Gated

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: anticonvulsant_computational_efficiency.csv  anticonvulsant_parallel_scaling_actual.csv  anticonvulsant_weak_scaling.csv  computational_efficiency.csv  large_scale_simulations.csv  model_validation_metrics.csv  parallel_scaling.csv  weak_scaling.csv
src/: anticonvulsant_benchmark.py  comparison.py  ctbn_markov.py  legacy_hh.py  legacy_markov.py  main.py  worker.py
